--- a/r5dev/vproj/gamesdk.vcxproj.filters
+++ b/r5dev/vproj/gamesdk.vcxproj.filters
@@ -504,9 +504,6 @@
     <ClCompile Include="..\engine\clockdriftmgr.cpp">
       <Filter>sdk\engine</Filter>
     </ClCompile>
-    <ClCompile Include="..\tier0\tslist.cpp">
-      <Filter>sdk\tier0</Filter>
-    </ClCompile>
     <ClCompile Include="..\engine\server\sv_main.cpp">
       <Filter>sdk\engine\server</Filter>
     </ClCompile>
@@ -1696,6 +1693,9 @@
     </ClInclude>
     <ClInclude Include="..\public\include\idebugoverlay.h">
       <Filter>sdk\public\include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\tier0\memstd.h">
+      <Filter>sdk\tier0</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
