--- a/r5dev/vproj/gamesdk.vcxproj
+++ b/r5dev/vproj/gamesdk.vcxproj
@@ -267,7 +267,9 @@
     <ClInclude Include="..\public\include\iclientthinkable.h" />
     <ClInclude Include="..\public\include\iclientunknown.h" />
     <ClInclude Include="..\public\include\icommandline.h" />
+    <ClInclude Include="..\public\include\iconcommand.h" />
     <ClInclude Include="..\public\include\iconvar.h" />
+    <ClInclude Include="..\public\include\icvar.h" />
     <ClInclude Include="..\public\include\idebugoverlay.h" />
     <ClInclude Include="..\public\include\ihandleentity.h" />
     <ClInclude Include="..\public\include\inetchannel.h" />
