--- a/r5dev/vproj/dedicated.vcxproj
+++ b/r5dev/vproj/dedicated.vcxproj
@@ -231,6 +231,7 @@
     <ClInclude Include="..\public\include\module.h" />
     <ClInclude Include="..\public\include\studio.h" />
     <ClInclude Include="..\public\include\utility.h" />
+    <ClInclude Include="..\public\include\worldsize.h" />
     <ClInclude Include="..\rtech\rtech_utils.h" />
     <ClInclude Include="..\rtech\rtech_game.h" />
     <ClInclude Include="..\rtech\rui\rui.h" />
