--- a/r5dev/vproj/clientsdk.vcxproj
+++ b/r5dev/vproj/clientsdk.vcxproj
@@ -239,6 +239,7 @@
     <ClInclude Include="..\public\include\edict.h" />
     <ClInclude Include="..\public\include\globalvars_base.h" />
     <ClInclude Include="..\public\include\icliententity.h" />
+    <ClInclude Include="..\public\include\icliententitylist.h" />
     <ClInclude Include="..\public\include\iclientnetworkable.h" />
     <ClInclude Include="..\public\include\iclientrenderable.h" />
     <ClInclude Include="..\public\include\iclientthinkable.h" />
