Netconsole and ConVar improvements
Implemented StringSplit() (split string with a delimiter, and stop splitting after either the last delimiter has been reached, or nMax, so when nMax is 2, then 'SET mat_sky_color 255 255 0 255' gets split into: "SET" "mat_sky_color" "255 255 0 255").

Netconsole now sends ConVar's/ConCommands and values separately with use of StringSplit.

ConVar now uses internal ChangeStringValue (this runs the callback).

--- a/r5dev/vproj/netconsole.vcxproj.filters
+++ b/r5dev/vproj/netconsole.vcxproj.filters
@@ -81,5 +81,8 @@
     <ClInclude Include="..\protoc\cl_rcon.pb.h">
       <Filter>thirdparty\protobuf</Filter>
     </ClInclude>
+    <ClInclude Include="..\public\include\utility.h">
+      <Filter>sdk\public</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
