--- a/r5dev/resource/cfg/autoexec.cfg
+++ b/r5dev/resource/cfg/autoexec.cfg
@@ -1,6 +1,7 @@
 //////////////////////////
 //// REPLICATED       ////
 //////////////////////////
+sv_cheats                    "0" // Allow cheats on the server.
 mp_allowed                   "1" // Whether multiplayer is allowed or not.
 developer                    "1" // Required for certain script functionality.
 
