--- a/r5dev/resource/cfg/autoexec_dev.cfg
+++ b/r5dev/resource/cfg/autoexec_dev.cfg
@@ -1,7 +1,7 @@
 //////////////////////////
 //// REPLICATED       ////
 //////////////////////////
-sv_cheats                    "1" // Enables cheats on the server.
+sv_cheats                    "1" // Allow cheats on the server.
 mp_allowed                   "1" // Whether multiplayer is allowed or not.
 developer                    "1" // Required for certain script functionality.
 
