--- a/r5dev/resource/cfg/englishserver_build_vpk.cfg
+++ b/r5dev/resource/cfg/englishserver_build_vpk.cfg
@@ -1,6 +1,7 @@
 fs_vpk_build "english" "server" "mp_common" "1"
 fs_vpk_build "english" "server" "mp_rr_aqueduct" "1"
 fs_vpk_build "english" "server" "mp_rr_aqueduct_night" "1"
+fs_vpk_build "english" "server" "mp_rr_arena_composite" "1"
 fs_vpk_build "english" "server" "mp_rr_ashs_redemption" "1"
 fs_vpk_build "english" "server" "mp_rr_canyonlands_64k_x_64k" "1"
 fs_vpk_build "english" "server" "mp_rr_canyonlands_mu1" "1"
