--- a/r5dev/resource/cfg/englishserver_extract_vpk.cfg
+++ b/r5dev/resource/cfg/englishserver_extract_vpk.cfg
@@ -1,6 +1,7 @@
 fs_vpk_unpack "vpk/englishserver_mp_common.bsp.pak000_dir.vpk"
 fs_vpk_unpack "vpk/englishserver_mp_rr_aqueduct.bsp.pak000_dir.vpk"
 fs_vpk_unpack "vpk/englishserver_mp_rr_aqueduct_night.bsp.pak000_dir.vpk"
+fs_vpk_unpack "vpk/englishserver_mp_rr_arena_composite.bsp.pak000_dir.vpk"
 fs_vpk_unpack "vpk/englishserver_mp_rr_ashs_redemption.bsp.pak000_dir.vpk"
 fs_vpk_unpack "vpk/englishserver_mp_rr_canyonlands_64k_x_64k.bsp.pak000_dir.vpk"
 fs_vpk_unpack "vpk/englishserver_mp_rr_canyonlands_mu1.bsp.pak000_dir.vpk"
